# djangoblog

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  urls.py
.github/workflows/: pipeline.yaml
authn/: urls.py  views.py
authn/templates/: password_reset_complete.html  password_reset_done.html  request_password_email.html
authn/tests/: test_views.py
config/: __init__.py  celery.py  settings.py
middleware/: login_middleware.py
post/: __init__.py  admin.py  apps.py  forms.py  tasks.py  views.py
post/migrations/: 0002_alter_post_tags.py  0007_alter_post_image.py  0008_alter_tag_name.py
post/models/: __init__.py  post.py
post/templates/: form.html  list.html
post/tests/: test_models.py
src/djangoblog/: __init__.py  celery.py  settings.py
src/djangoblog/core/: tasks.py
src/djangoblog/core/authn/: forms.py  views.py
src/djangoblog/core/authn/templates/: login.html  password_reset_confirm.html  register.html  request_password.html
src/djangoblog/core/authn/tests/: test_views.py
src/djangoblog/core/middleware/: login_middleware.py
src/djangoblog/core/post/: forms.py  urls.py  views.py
src/djangoblog/core/post/migrations/: 0001_initial.py  (+7 more)
src/djangoblog/core/user/: models.py
src/djangoblog/urls/: urls.py
static/css/: blog_detail.css  blog_detail_nav.css  blog_form.css  blog_list.css  login.css  register.css
templates/base/: head.html  nav.html
user/: admin.py  models.py
user/migrations/: 0001_initial.py  0002_alter_baseuser_id.py  0003_alter_baseuser_managers_baseuser_date_joined_and_more.py
(+9 files in other folders)
