[tool.poetry]
name = "django_blog"
version = "0.1.0"
description = "A blog made with Django"
authors = ["jose.padin <jose.mendez@kubicum.com>"]
license = "MIT"

[tool.poetry.dependencies]
celery = "5.1"
Django = "4.0"
python = "^3.8"
Pillow = "^9.1.1"
redis = "^4.3.3"
django-redis = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
